--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,7 @@
 .reset {
 	margin-left: 0;
 	margin-right: auto;
-	width: 8em;
+	width: 6em;
 	height: 2em;
 	background-color: #663234;
 	color: white;
@@ -45,7 +45,7 @@
 	margin: 0 auto;
 }
 
-.item > li {
+.item {
 	background-color: #457461;
 	height: 2em;
 	margin-top: 3em;
@@ -55,4 +55,24 @@
 	text-align: center;
  	color: white;
   	font-family: sans-serif;
+}
+
+.check {
+	background-color: white;
+	color: #457461;
+	font-size: 1em;
+	height: 2em;
+	margin-top: -.2em;
+	padding: 0;	
+}
+
+.delete {
+	background-color: #663234;
+	font-size: 1em;
+	height: 2em;
+	margin-top: -.2em;
+	padding: 0;
+}
+
+.list {
 }
