--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,6 @@
 .input {
 	background-color: white;
 	height: 2em;
-	width: 20em;
 }
 
 .command {
@@ -63,6 +62,7 @@
 	font-size: 1em;
 	height: 2em;
 	margin-top: -.2em;
+	margin-left: -.7em;
 	padding: 0;	
 }
 
@@ -71,6 +71,7 @@
 	font-size: 1em;
 	height: 2em;
 	margin-top: -.2em;
+	margin-right: -.7em;
 	padding: 0;
 }
 
