--- a/css/layout.css
+++ b/css/layout.css
@@ -25,12 +25,12 @@
 	margin-left: 0;
 	margin-right: auto;
 	width: 6em;
-	height: 2em;
+	height: 2.5em;
 	background-color: #663234;
 	color: white;
-	font-size: 1em;
+	font-size: .8em;
 	text-align: center;
-	padding-top: .5em;
+	padding-top: 0;
 }
 
 .add {
