--- a/css/layout.css
+++ b/css/layout.css
@@ -25,34 +25,69 @@
 	margin-left: 0;
 	margin-right: auto;
 	width: 6em;
-	height: 2.5em;
+}
+
+.reset-b {
 	background-color: #663234;
+	height: 2.5em;
+	width: 6em;
 	color: white;
 	font-size: .8em;
 	text-align: center;
-	padding-top: 0;
+	font-family: sans-serif;
+	padding: 0;
+}
+
+.reset-b:hover {
+	opacity: .5;
 }
 
 .add {
-	background-color: #457461;
-	font-size: 1em;
 	width: 4em;
+}
+
+.add-b {
+	background-color: #457461;
 	height: 2em;
+	width: 4em;
 	color: white;
+	font-size: 1em;
 	text-align: center;
-	padding: .5em 0;
-	margin: 0 auto;
+	font-family: sans-serif;
+	padding: 0;
+	margin-left: -1em;
+}
+
+.add-b:hover {
+	opacity: .5;
+}
+
+.list {
+	margin-top: 6em;
 }
 
 .item {
 	background-color: #457461;
 	height: 2em;
-	margin-top: 3em;
 	font-size: 1.5em;
-	padding-top: .2em;
+	padding-top: .4em;
 	padding-bottom: .2em;
+	margin-bottom: 1em;
 	text-align: center;
  	color: white;
+  	font-family: sans-serif;
+}
+
+.item-marked {
+	background-color: #D6C2AD;
+	height: 2em;
+	font-size: 1.5em;
+	text-decoration: line-through;
+	padding-top: .4em;
+	padding-bottom: .2em;
+	margin-bottom: 1em;
+	text-align: center;
+ 	color: #3D2914;
   	font-family: sans-serif;
 }
 
@@ -61,8 +96,8 @@
 	color: #457461;
 	font-size: 1em;
 	height: 2em;
-	margin-top: -.2em;
 	margin-left: -.7em;
+	margin-top: -.4em;
 	padding: 0;	
 }
 
@@ -70,10 +105,17 @@
 	background-color: #663234;
 	font-size: 1em;
 	height: 2em;
-	margin-top: -.2em;
 	margin-right: -.7em;
+	margin-top: -.4em;
 	padding: 0;
 }
 
-.list {
+.uncheck {
+	background-color: #457461;
+	color: white;
+	font-size: 1em;
+	height: 2em;
+	margin-left: -.7em;
+	margin-top: -.4em;
+	padding: 0;	
 }
