--- a/css/layout.css
+++ b/css/layout.css
@@ -10,9 +10,9 @@
 	padding-top: 2em;
 }
 
-.input {
+#input {
 	background-color: white;
-	height: 2em;
+	height: 2.3em;
 }
 
 .command {
@@ -55,7 +55,7 @@
 	text-align: center;
 	font-family: sans-serif;
 	padding: 0;
-	margin-left: -1em;
+	margin-left: -1.9em;
 }
 
 .add-b:hover {
@@ -76,6 +76,7 @@
 	text-align: center;
  	color: white;
   	font-family: sans-serif;
+  	display: none;
 }
 
 .item-marked {
@@ -87,8 +88,9 @@
 	padding-bottom: .2em;
 	margin-bottom: 1em;
 	text-align: center;
- 	color: #3D2914;
+ 	color: #663234;
   	font-family: sans-serif;
+  	display: none;
 }
 
 .check {
@@ -105,7 +107,7 @@
 	background-color: #663234;
 	font-size: 1em;
 	height: 2em;
-	margin-right: -.65em;
+	margin-right: -.62em;
 	margin-top: -.4em;
 	padding: 0;
 }
