--- a/css/layout.css
+++ b/css/layout.css
@@ -76,6 +76,7 @@
 	text-align: center;
  	color: white;
   	font-family: sans-serif;
+  	display: none;
 }
 
 .item-marked {
@@ -89,6 +90,7 @@
 	text-align: center;
  	color: #663234;
   	font-family: sans-serif;
+  	display: none;
 }
 
 .check {
@@ -109,6 +111,7 @@
 	margin-right: -.62em;
 	margin-top: -.4em;
 	padding: 0;
+	display: none;
 }
 
 .uncheck {
@@ -119,4 +122,5 @@
 	margin-left: -.63em;
 	margin-top: -.4em;
 	padding: 0;	
+	display: none;
 }
